cabal-version: 3.0
name: hasql-migration
version: 0.3.1
synopsis: PostgreSQL Schema Migrations
description:
  A hasql schema migration utility. Port of postgresql-simple-migration
  that tracks executed scripts by filename and MD5 checksum so changes
  to already-applied migrations are detected at runtime.

homepage: https://github.com/tvh/hasql-migration
bug-reports: https://github.com/tvh/hasql-migration/issues
license: BSD-3-Clause
license-file: License
author: Timo von Holtz <tvh@tvholtz.net>
maintainer: Timo von Holtz <tvh@tvholtz.net>
copyright: Timo von Holtz, Andreas Meingast, Sumit Raja
category: Database
build-type: Simple
tested-with: ghc ==9.12.*
extra-source-files:
  License
  README.md
  share/test/*.sql
  share/test/scripts/*.sql

source-repository head
  type: git
  location: https://github.com/tvh/hasql-migration

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fwarn-tabs

common language
  default-language: GHC2021
  default-extensions:
    LambdaCase
    OverloadedStrings

library
  import: warnings, language
  hs-source-dirs: src
  exposed-modules:
    Hasql.Migration
    Hasql.Migration.Util

  build-depends:
    base >=4.14 && <5,
    bytestring >=0.10,
    contravariant >=1.3,
    crypton >=1.0 && <2,
    directory >=1.2,
    hasql >=1.10,
    hasql-transaction >=1.2,
    ram >=0.20 && <0.23,
    text >=1.2,
    time >=1.4,

test-suite hasql-migration-test
  import: warnings, language
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules: Hasql.MigrationTest
  build-depends:
    base >=4.14 && <5,
    bytestring >=0.10,
    hasql >=1.10,
    hasql-migration,
    hasql-transaction >=1.2,
    hspec >=2.2,
    text >=1.2,
    transformers >=0.3,
